show a pure-aspect augmentation of proto_library to support codegen

--- a/.bazelrc
+++ b/.bazelrc
@@ -2,8 +2,8 @@ import %workspace%/tools/preset.bazelrc
 try-import %workspace%/tools/java17.bazelrc
 
 ### YOUR PROJECT SPECIFIC OPTIONS GO HERE ###
-
-startup --quiet
+common --@protobuf//bazel/toolchains:prefer_prebuilt_protoc
+common --aspects=//proto:ruby.bzl%ruby_proto_aspect
 
 # Disable skymeld; see https://github.com/bazelbuild/bazel/issues/23743
 # fixes src/main/tools/process-wrapper-legacy.cc:80: "execvp(external/++toolchains+coreutils_linux_amd64/coreutils, ...)": No such file or directory
@@ -11,16 +11,7 @@ common --noexperimental_merged_skyframe_analysis_execution
 
 # also see: https://blog.aspect.build/configuring-bazels-downloader
 common --downloader_config=tools/downloader.cfg
-
-# rules_python is working to enable this default to avoid dependency on a system interpreter
-# See https://github.com/bazel-contrib/rules_python/issues/3187
-# NB: some tools run py_binary targets even if the user didn't select to add Python to their project
-common --@rules_python//python/config_settings:bootstrap_impl=script
 common --workspace_status_command=githooks/check-config.sh
-
-
-
-
 
 
 # Load any settings & overrides specific to the current user from `.aspect/bazelrc/user.bazelrc`.
