--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,11 +8,8 @@ bazel_dep(name = "bazel_skylib", version = "1.9.0")
 bazel_dep(name = "rules_multitool", version = "1.11.1")
 bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
 bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0")
-
-# We have to take a dependency on rules_python in order to set bootstrap=script
-# for transitive dependencies, even if there are no Python rules used in this repo.
-# See .bazelrc
-bazel_dep(name = "rules_python", version = "1.7.0")
+bazel_dep(name = "protobuf", version = "33.4")
+bazel_dep(name = "grpc", version = "1.76.0")
 bazel_dep(name = "gazelle", version = "0.47.0")
 
 multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
@@ -21,7 +18,13 @@ use_repo(multitool, "multitool")
 
 #########################
 # Support for Ruby, see https://github.com/bazel-contrib/rules_ruby
-bazel_dep(name = "rules_ruby", version = "0.21.1")
+bazel_dep(name = "rules_ruby")
+single_version_override(
+    module_name = "rules_ruby",
+    patch_strip = 1,
+    patches = ["//:rules_ruby.patch"],
+    version = "0.21.1",
+)
 
 ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
 ruby.toolchain(
