move aspect to rules_ruby

--- a/.bazelrc
+++ b/.bazelrc
@@ -3,7 +3,7 @@ try-import %workspace%/tools/java17.bazelrc
 
 ### YOUR PROJECT SPECIFIC OPTIONS GO HERE ###
 common --@protobuf//bazel/toolchains:prefer_prebuilt_protoc
-common --aspects=//proto:ruby.bzl%ruby_proto_aspect
+# common --aspects=//proto:ruby.bzl%ruby_proto_aspect
 
 # Disable skymeld; see https://github.com/bazelbuild/bazel/issues/23743
 # fixes src/main/tools/process-wrapper-legacy.cc:80: "execvp(external/++toolchains+coreutils_linux_amd64/coreutils, ...)": No such file or directory
